# GnLTransformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_full.py  run_subset.py
src/gnl_transformer/: __init__.py  dataset_pyg.py  dataset_raw.py  explain_gnl.py  gnl.py  gnn_baselines.py  in_memory_dataset.py  line_graph.py  models.py  pyg.py  training.py  utils.py
src/poly2graph/: __init__.py
src/poly2graph/gnl_transformer/: GnLTransformer.py  __init__.py  explain_gnl.py
src/poly2graph/poly2graph/: __init__.py  parallel_roots.py  real_space.py  skeleton2graph.py  spectral_graph.py
src/poly2graph/poly2graph/dataset/: __init__.py  post.py  sampling_1band.py
